public/stylesheets/admin.css
html{
  background-color: #ddd;
}

body{
  font-family: "Bitstream Vera Sans", Arial, sans-serif;
  background-color: #ddd;
}

#header {
  width:100%;
  text-align: left;
  background-color: #0084ff;
  color: white;
  padding: 10px;
  height: 40px;
}

#header h1{
  font-size: 250%;
}

#toolbar{
  background-color: #ddd;
  text-align: left;
  position: absolute;
  top: 60px;
  height: 23px;
  left: 0;
  width: 100%;
}

#content{
  margin-top: 35px;
}

#sidebar{
  float: left;
  width: 25%;
  background-color: #ddd;
  text-align: left;
}

#sidebar h2{
  background-color: #bbb;
  padding: 4px;
  margin: 4px 0;
}

#doc2{
  width: 71%;
  float: left;
  margin-right: 10px;
}

/* Tabs */
#hd {
  width:100%;
}

#hd ul {
  float: left;
}

#hd ul#base-links {
  float: right;
}

#hd ul li {
  display:inline;
}

#hd ul li a, #hd ul li span {
  text-decoration: none;
  padding: 2px 10px;
  background:#eee;
}

#hd ul li span {
  background:#0084ff;
  color: #eee;
}

#hd ul li a:hover {
  padding: 2px 10px;
  background:#bbb;
}

#hd ul li {
  text-decoration:none;
}

#bd {
  background:white;
  padding:5px;
  margin-left: 10px;
  border-width: 0 2px 2px 0px;
  border-style: solid;
  border-color: #aaa;
}

#bd h1{
  font-size: 180%;
  background-color: #ddd;
  padding: 4px 10px;
  margin-bottom: 10px;
}

#bd h2{
  font-size: 140%;
}

label.title_label{
  display: block;
}

.clear{ clear: both; }

ul.grid{
  display: block;
}

ul.grid li.item{
  display: block;
  float: left;
  width: 214px;
  margin-right: 10px;
}

ul.grid li.item img{
  border: 10px solid #ddd;
}

ul.grid li.item img:hover {
  border: 10px solid #bbb;
}
ul.grid li.item.active img {
  border-color: #0084FF;
}
#tree li li:hover {
  background-color: #eee;
}

#admin-menu{
  position: relative;
  z-index: 200;
}

#admin-menu li{
  float: left;
  position: relative;
  width: 150px;
  z-index: 100;
  margin-right: 20px;
}

#admin-menu li:hover span{
  background: #006bcf;
}

#admin-menu li span, #admin-menu li a{
  display: block;
  width: 150px;
}
#admin-menu li span{
  cursor: default;
}

#admin-menu li ul{
  display: none;
  padding: 0;
  margin: 0;
}

#admin-menu li:hover ul{
  display: block;
  background: white;
}

#admin-menu li ul li{
}

.note{
  margin: 10px 0;
  background-color: #ccc;
  padding: 10px;
}

#sidebar > .note:first-child {
  margin-top: 0;
}

a.button{
  padding: 10px;
  background-color: #ccc;
  color: black;
  text-decoration: none;
  width: 200px;
  display: block;
}
a.button:hover {
  background-color: #bbb !important;
}
a.button.icon{
  padding-left: 30px;
  width: 180px;
  background-repeat: no-repeat;
  background-position: 5px 10px;
}
a.button.icon.add{
  background-image: url(/images/famfamfam_icons/add.png)
}
a.button.icon.remove{
  background-image: url(/images/famfamfam_icons/delete.png)
}
a.button.icon.back{
  background-image: url(/images/famfamfam_icons/arrow_left.png)
}
a.button.icon.edit{
  background-image: url(/images/famfamfam_icons/pencil.png)
}
a.button.icon.rss{
  background-image: url(/images/famfamfam_icons/rss.png)
}
#tree ul li .page_controls ul.dropdown li{
  float: none;
}

.clickMenu div.outerbox{
  font-size: 100%;
}

.clickMenu li.main{
  font-size: 85%;
}

.clickMenu li.main:hover {
  background-color: #ddd !important;
}

.clickMenu li.main li{
  min-width: 120px !important;
}

.clickMenu li.main ul.innerBox li:hover, .clickMenu li.main ul.innerBox li:hover a {
  background-color: #ccc !important;
}
.clickMenu li.main ul.innerBox li a:hover {
  cursor: pointer;
}

